--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         class="delete-memorial__foreground"
                     ></canvas>
                 </div>
+                <span id="counter"></span>
             </div>
 
             <span id="excavator" class="delete-memorial__excavator">🚜</span>
