add test button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                         class="delete-memorial__foreground"
                     ></canvas>
                 </div>
-                <span id="counter"></span>
+                <div>
+                    <button id="not-destroyed">Zobrazit nevymazané</button>
+                    <span id="counter"></span>
+                </div>
             </div>
 
             <span id="excavator" class="delete-memorial__excavator">🚜</span>
