--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <body>
         <main>
             <div id="delete-memorial" class="delete-memorial">
-                <div class="delete-memorial__title">Vymaž si památku!</div>
+                <div class="delete-memorial__title">
+                    <h1>Vymaž si památku!</h1>
+                    <p>
+                        Odstraňte si památku virtuálně, ať už nemusíte v reálu.
+                    </p>
+                </div>
 
                 <div class="delete-memorial__container-btn">
                     <button class="btn btn_disabled" disabled>
@@ -20,16 +25,21 @@
                     <button class="btn btn_clickable">Chemapol</button>
                 </div>
 
-                <div class="delete-memorial__field">
-                    <canvas
-                        id="canvas"
-                        class="delete-memorial__foreground"
-                    ></canvas>
-                </div>
                 <div>
+                    <div class="delete-memorial__field">
+                        <canvas
+                            id="canvas"
+                            class="delete-memorial__foreground"
+                        ></canvas>
+                    </div>
+                </div>
+                <p id="press-descriotion">
+                    Stiskem v rámečku začněte mazat obrázek.
+                </p>
+                <!-- <div>
                     <button id="not-destroyed">Zobrazit nevymazané</button>
                     <span id="counter"></span>
-                </div>
+                </div> -->
             </div>
 
             <span id="excavator" class="delete-memorial__excavator">🚜</span>
