add zeleznicni most

--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
                     </button>
                     <button class="btn btn_disabled" disabled>Transgas</button>
                     <button class="btn btn_disabled" disabled>ÚTB</button>
-                    <button class="btn btn_clickable">Chemapol</button>
+                    <button
+                        value="chemapol"
+                        id="change-btn"
+                        class="btn btn_clickable"
+                    >
+                        Chemapol
+                    </button>
+                    <button
+                        value="zeleznicniMost"
+                        id="change-btn"
+                        class="btn btn_clickable"
+                    >
+                        Železniční most
+                    </button>
                 </div>
 
                 <div>
@@ -44,6 +57,7 @@
 
             <span id="excavator" class="delete-memorial__excavator">🚜</span>
         </main>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
+        <script scr="confetti.js" type="module"></script>
     </body>
 </html>
