--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <div id="delete-memorial" class="delete-memorial">
                 <div class="delete-memorial__title">
                     <h1>Vymaž si památku!</h1>
-                    <p>
+                    <!-- <p>
                         Odstraňte si památku virtuálně, ať už nemusíte v reálu.
-                    </p>
+                    </p> -->
                 </div>
 
                 <div class="delete-memorial__container-btn">
@@ -46,16 +46,12 @@
                         ></canvas>
                     </div>
                 </div>
-                <p id="press-descriotion">
-                    Stiskem v rámečku začněte mazat obrázek.
-                </p>
-                <!-- <div>
-                    <button id="not-destroyed">Zobrazit nevymazané</button>
-                    <span id="counter"></span>
-                </div> -->
+                <p id="press-descriotion">Stiskem v rámečku začněte mazat.</p>
             </div>
 
-            <span id="excavator" class="delete-memorial__excavator">🚜</span>
+            <span id="bulldozer" class="delete-memorial__bulldozer">
+                <img src="Bulldozer.svg" alt="bulldozer" />
+            </span>
         </main>
         <script src="index.js" type="module"></script>
         <script scr="confetti.js" type="module"></script>
