--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <canvas id="canvas" class="delete-memorial__foreground"></canvas>
           </div>
         </div>
-        <p id="press-descriotion">Stiskem v rámečku začněte mazat.</p>
+        <p id="press-descriotion">Stiskem v rámečku začni mazat.</p>
       </div>
 
       <span id="bulldozer" class="delete-memorial__bulldozer">
