--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       <div id="delete-memorial" class="delete-memorial">
         <div class="delete-memorial__title">
           <h1>Vymaž si památku!</h1>
-          <!-- <p>
-                        Odstraňte si památku virtuálně, ať už nemusíte v reálu.
-                    </p> -->
         </div>
 
         <div class="delete-memorial__container-btn">
@@ -35,7 +32,8 @@
 
         <div>
           <div class="delete-memorial__field">
-            <canvas id="canvas" class="delete-memorial__foreground"></canvas>
+            <p id="end-descriotion">Smazáno. Co dál?</p>
+            <canvas id="canvas"></canvas>
           </div>
         </div>
         <p id="press-descriotion">Stiskem v rámečku začni mazat.</p>
