add google analytics

--- a/index.html
+++ b/index.html
@@ -45,5 +45,20 @@
     </main>
     <script src="index.js" type="module"></script>
     <script scr="confetti.js" type="module"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JJG0SM17BC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-JJG0SM17BC");
+    </script>
   </body>
 </html>
