add progress bar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <div id="progress-bar-container">
+      <div id="progress-bar"></div>
+    </div>
     <main>
       <div id="delete-memorial" class="delete-memorial">
         <div>
@@ -60,7 +63,7 @@
             <p id="end-description">Smazáno. Co dál?</p>
             <canvas id="canvas"></canvas>
           </div>
-          <p id="press-descriotion">Stiskem v rámečku začni mazat.</p>
+          <p id="press-description">Začni stiskem v rámečku.</p>
         </div>
       </div>
 
