--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="progress-bar-container">
-      <div id="progress-bar"></div>
+      <div id="progress-bar"><span id="progress-bar__percentage"></span></div>
     </div>
     <main>
       <div id="delete-memorial" class="delete-memorial">
@@ -62,8 +62,8 @@
           <div class="delete-memorial__field">
             <p id="end-description">Smazáno. Co dál?</p>
             <canvas id="canvas"></canvas>
+            <p id="press-description">Začni stiskem v rámečku</p>
           </div>
-          <p id="press-description">Začni stiskem v rámečku.</p>
         </div>
       </div>
 
