--- a/index.html
+++ b/index.html
@@ -2,35 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preload" href="zeleznicni-most.png" as="image" />
+    <link rel="preload" href="chemapol.png" as="image" />
     <title>Vymaž si památku</title>
   </head>
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != "dataLayer" ? "&l=" + l : "";
-      j.async = true;
-      j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, "script", "dataLayer", "GTM-5HTJJMDB");
-  </script>
-  <!-- End Google Tag Manager -->
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-5HTJJMDB"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <div id="progress-bar-container">
       <div id="progress-bar"><span id="progress-bar__percentage"></span></div>
     </div>
@@ -76,21 +57,6 @@
     <!-- Include JavaScript modules -->
     <script src="index.js" type="module"></script>
     <script scr="confetti.js" type="module"></script>
-
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-JJG0SM17BC"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-JJG0SM17BC");
-    </script>
 
     <!-- Google tag (gtag.js) -->
     <script
