--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="delete-memorial__field">
             <p id="end-description">Smazáno. Co dál?</p>
             <canvas id="canvas"></canvas>
-            <p id="press-description">Začni stiskem v rámečku</p>
+            <p id="press-description">Začni&nbsp;stiskem v&nbsp;rámečku</p>
           </div>
         </div>
       </div>
