--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div>
           <div class="delete-memorial__field">
-            <p id="end-description">Smazáno. Co dál?</p>
+            <p id="end-description">Smazáno. Co&nbsp;dál?</p>
             <canvas id="canvas"></canvas>
             <p id="press-description">Začni&nbsp;stiskem v&nbsp;rámečku</p>
           </div>
