--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <title>Vymaž si památku</title>
   </head>
   <body>
-    <div id="progress-bar-container">
-      <div id="progress-bar"><span id="progress-bar__percentage"></span></div>
-    </div>
     <main>
       <div id="delete-memorial" class="delete-memorial">
         <div>
@@ -44,6 +41,11 @@
             <p id="end-description">Smazáno. Co&nbsp;dál?</p>
             <canvas id="canvas"></canvas>
             <p id="press-description">Začni&nbsp;stiskem v&nbsp;rámečku</p>
+            <div id="progress-bar-container">
+              <div id="progress-bar">
+                <span id="progress-bar__percentage"></span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
