--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+    <meta
+      name="description"
+      content="Užij si bourání památek. Aspoň na chvilku!"
+    />
     <link rel="stylesheet" href="style.css" />
     <link rel="preload" href="zeleznicni-most.png" as="image" />
     <link rel="preload" href="chemapol.png" as="image" />
