add pragerovy kostky

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="btn btn_disabled" disabled>OD Ještěd</button>
             <button class="btn btn_disabled" disabled>Hotel Praha</button>
             <button class="btn btn_disabled" disabled>Transgas</button>
-            <button class="btn btn_disabled" disabled>ÚTB</button>
+            <!-- <button class="btn btn_disabled" disabled>ÚTB</button> -->
             <button
               value="zeleznicniMost"
               id="change-btn"
@@ -43,11 +43,19 @@
             <button value="chemapol" id="change-btn" class="btn btn_clickable">
               Chemapol
             </button>
+            <button
+              value="pragerovyKostky"
+              id="change-btn"
+              class="btn btn_clickable"
+            >
+              Pragerovy kostky
+            </button>
           </div>
         </div>
         <div>
           <div class="delete-memorial__field">
-            <p id="end-description">Smazáno. Co&nbsp;dál?</p>
+            <p id="end-description">Smazáno. A co&nbsp;dál?</p>
+            <a href="" id="end-link">Podepiš petici za záchranu!</a>
             <canvas id="canvas"></canvas>
             <p id="press-description">Začni&nbsp;stiskem v&nbsp;rámečku</p>
           </div>
