set kostky to default

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div>
           <div class="delete-memorial__field">
             <p id="end-description">Smazáno. A co&nbsp;dál?</p>
-            <a href="" id="end-link">Podepiš petici za záchranu!</a>
+            <a href="" id="end-link">Podepiš petici za zachování!</a>
             <canvas id="canvas"></canvas>
             <p id="press-description">Začni&nbsp;stiskem v&nbsp;rámečku</p>
           </div>
