add preload for img

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       name="description"
       content="Užij si bourání památek. Aspoň na chvilku!"
     />
+    <title>Vymaž si památku</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preload" href="zeleznicni-most.png" as="image" />
     <link rel="preload" href="chemapol.png" as="image" />
-    <title>Vymaž si památku</title>
+    <link rel="preload" href="pragerovy-kostky.png" as="image" />
   </head>
   <body>
     <div id="progress-bar-container">
