--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="Užij si bourání památek. Aspoň na chvilku!"
+      content="Užij si bourání památek. Aspoň na chvilku! Vymaž si památku jako Železniční moct nebo Chemapol."
     />
     <title>Vymaž si památku</title>
     <link rel="stylesheet" href="style.css" />
