change img format

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     />
     <title>Vymaž si památku</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preload" href="zeleznicni-most.png" as="image" />
-    <link rel="preload" href="chemapol.png" as="image" />
-    <link rel="preload" href="pragerovy-kostky.png" as="image" />
+    <link rel="preload" href="zeleznicni-most.webp" as="image" />
+    <link rel="preload" href="chemapol.webp" as="image" />
+    <link rel="preload" href="pragerovy-kostky.webp" as="image" />
+    <link rel="preload" href="style.css" as="style" />
+    <link rel="preload" href="index.js" as="script" />
   </head>
   <body>
     <div id="progress-bar-container">
