--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="cs">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Preview start -->
+    <meta property="og:title" content="Vymaž si památku" />
+    <meta property="og:image" content="preview.png" />
+    <meta
+      property="og:url"
+      content="https://marketahajek.cz/vymaz-si-pamatku/"
+    />
+    <meta property="og:type" content="website" />
+    <!-- Preview end -->
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
