--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
     <!-- Preview start -->
     <meta property="og:title" content="Vymaž si památku" />
-    <meta property="og:image" content="preview.png" />
+    <meta
+      property="og:image"
+      content="https://marketahajek.cz/vymaz-si-pamatku/preview.png"
+    />
     <meta
       property="og:url"
       content="https://marketahajek.cz/vymaz-si-pamatku/"
