--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
 
-    <!-- Preview start -->
+    <!-- Facebook Meta Tags -->
     <meta property="og:title" content="Vymaž si památku" />
+    <meta
+      property="og:description"
+      content="Užij si bourání památek. Aspoň na chvilku!"
+    />
     <meta
       property="og:image"
       content="https://marketahajek.cz/vymaz-si-pamatku/images/preview.png"
@@ -14,7 +18,6 @@
       content="https://marketahajek.cz/vymaz-si-pamatku/"
     />
     <meta property="og:type" content="website" />
-    <!-- Preview end -->
 
     <meta
       name="viewport"
