--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <link rel="preload" href="index.js" as="script" />
 
     <!-- Plausible Analytics -->
+    <script
+      async
+      src="https://plausible.io/js/pa-G0QY9O6aRQJFPqxt6xZSb.js"
+    ></script>
     <script>
       (window.plausible =
         window.plausible ||
